# app-voice-generator

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/azuraforge_voicegen/: config_schema.py  pipeline.py
src/azuraforge_voicegen/config/: default_config.yml  form_schema.json
tools/: run_isolated.py
