[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-app-voice-generator"
version = "0.1.0"
description = "A simple voice generation pipeline for AzuraForge."
requires-python = ">=3.10"
dependencies = [
    "azuraforge-learner @ git+https://github.com/AzuraForge/learner.git@main"
]

[project.entry-points]
"azuraforge.pipelines" = { voice_generator = "azuraforge_voicegen.pipeline:VoiceGeneratorPipeline" }
"azuraforge.configs" = { voice_generator = "azuraforge_voicegen.pipeline:get_default_config" }